--- a/src/styles/components/dashboard/_dashboard.scss
+++ b/src/styles/components/dashboard/_dashboard.scss
@@ -16,6 +16,7 @@
     }
   } // dashboard__platform
   &__groups{
+    align-content: flex-start;
     @media(min-width: $mobileL-bp){
       display: grid;
       grid-template-columns: 1fr;
