--- a/src/styles/components/viewGroup/_viewGroup.scss
+++ b/src/styles/components/viewGroup/_viewGroup.scss
@@ -79,6 +79,7 @@
       align-items: flex-start;
       flex-wrap: wrap;
       height: 89%;
+      align-content: flex-start;
     }
   } // viewGroup__list
 
